--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="cup">
         <div class="remained" id="remained">
-            <span class="liters"></span>
+            <span class="liters" id="liters"></span>
             <small>Remained</small>
         </div>
 
